# InvestManagmentSimulation

./: .gitignore  CMakePresets.json  docker-compose.yml
adminFront/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
adminFront/src/: app.tsx  main.tsx  style.css
adminFront/src/components/: AssetGrowthChart.tsx  AssetsDistributionPieChart.tsx  EditUserAssets.tsx  NewsFeed.tsx  StockQuotes.tsx  UserAssetsTable.tsx
adminFront/src/pages/: Home.tsx
backend/: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake
backend/headers/: active.h  bond.h  candle.h  cryptocurrency.h  currency.h  oil.h  precious_metal.h  precious_metals.h  stock.h  wallet.h  yen.h
backend/include/: includes.h
backend/lib/: httplib.h
backend/src/: Active.cpp  active.cpp  bond.cpp  candle.cpp  cryptocurrency.cpp  currency.cpp  main.cpp  oil.cpp  precious_metal.cpp  stock.cpp  wallet.cpp  yen.cpp
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.tsx  main.tsx
frontend/src/Game/: Game.ts
frontend/src/components/: HamburgerMenu.tsx  NewsFeed.tsx  PieChart.tsx  StockQuotes.tsx  Tetris.tsx  ThemeProvider.tsx  TradingViewWidget.tsx  chart.tsx
frontend/src/hooks/: app.js
frontend/src/pages/: Assets.tsx  Help.tsx  Home.tsx  Markets.tsx  Register.tsx  Settings.tsx  start.tsx
frontend/src/pages/Hello/: HelloPage.tsx
mongoDocker/: Dockerfile  docker-compose.yml  main.py
mongoDocker/mongodb/: Dockerfile
python/: Dockerfile  bot.py  ddos.py  requirements.txt
